# Descript-in-OCaml

./: README.md  descript.opam  dune-project
lib/: codegen.ml  dune  lexer.ml  parser.ml  utils.ml
test/: dune
